# nornet-vmimage-builder-scripts

./: NOTES  README  README.md  copy-haw-vms  copy-hipercontracer-vms  copy-neat-vms  copy-openstack-vms  copy-rserpooldemo-vms  directories.config  f1  link-all-ovas  m1  make-all  make-basic-vms  make-development-vms  make-direct  make-docker  make-experiment-vms  make-freebsd-vms  make-haw-vms  make-hipercontracer-vms  make-kde+development-vms  make-kde-vms  make-minimal-vms  make-neat-vms  make-nornet-vms  make-openstack-vms  make-proxmox-vms  make-proxmox-vms1  make-proxmox-vms2  make-proxmox-vms3  make-rserpool-vms  make-simulamet-vms  make-templates  make-vm  make-vsphere-vms  prepare-script-tester  prepare-server  proxmox-cleanup-templates  proxmox.config  (+8 more)
docker/: debian-10.json  debian-11.json  debian-12.json  debian-13.json  debian-Testing.json  debian-Unstable.json  fedora-34.json  fedora-35.json  fedora-36.json  fedora-37.json  fedora-38.json  fedora-39.json  fedora-40.json  fedora-41.json  fedora-42.json  fedora-43.json  fedora-44.json  ubuntu-12.04.json  ubuntu-14.04.json  ubuntu-16.04.json  ubuntu-18.04.json  ubuntu-20.04.json  ubuntu-22.04.json  ubuntu-24.04.json  ubuntu-25.04.json  ubuntu-25.10.json  ubuntu-26.04.json
files/: 00-user-settings  05-user-settings  11-system-info  12-configure-grub  13-system-info  20-kde  22-configure-wireshark  23-configure-strawberry  README.html  generate-backgrounds  kde  user-settings
files/05-user-settings.files/: bashrc
files/11-system-info.files/: 01-hostname  02-simulamet  banner-helper
files/12-configure-grub.files/: 01_bootsplash.in  06_aaaaa_bootsplash.in
files/13-system-info.files/: banner-helper
files/20-kde.files/: Radios.m3u
files/5gVINNI/: README.html
files/HAW/: README.html
files/RSerPoolDemo/: README.html
files/backgrounds/: Affiliation.text  CMakeLists.txt  Name.text  Settings.input  Subtitle.text  Title.text  URL.text  build-caption  build-overlay  test-overlay
files/backgrounds/gimp-scripts/: Make-Background  Make-BumpMap  Make-Caption  Make-Cloth  Make-GlossyText  Make-Mosaic  Make-OilPainting  Make-OldPhoto  Make-Painting  Make-Text  Resize-with-Cropping  Test-Gimp  gs-bumpmap  gs-caption  gs-clothify  gs-glossytext  gs-mosaic  gs-oilify  gs-oldphoto  gs-resize-with-cropping  gs-test-gimp
files/user-settings.files/: make-icons
http/debian/: debian.preseed
http/fedora-1disk/: ks.cfg  validate
http/fedora-3disks/: ks.cfg
http/freebsd-1disk/: installerconfig
http/freebsd-3disks/: installer  installerconfig  p1  zfsboot
http/ubuntu-1disk/: user-data
http/ubuntu-3disks/: user-data
http/ubuntu-legacy/: legacy.preseed
installer/: debian-10.json  debian-11.json  debian-12.json  debian-13.json  debian-Testing.json  fedora-31.json  fedora-32.json  fedora-33.json  fedora-34.json  fedora-35.json  fedora-36.json  fedora-37.json  fedora-38.json  fedora-39.json  fedora-40.json  fedora-41.json  fedora-42.json  fedora-43.json  fedora-44.json  freebsd-12.1.json  freebsd-12.2.json  freebsd-12.3-RELEASE.json  freebsd-12.3.json  freebsd-12.4-RELEASE.json  freebsd-13.0.json  freebsd-13.1.json  freebsd-13.2-RELEASE.json  freebsd-13.2.json  freebsd-13.3-RELEASE.json  freebsd-13.4-RELEASE.json  freebsd-13.5-RELEASE.json  freebsd-14.0-RELEASE.json  freebsd-14.0-STABLE.json  freebsd-14.0.json  freebsd-14.1-RELEASE.json  freebsd-14.1-STABLE.json  freebsd-14.2-RELEASE.json  freebsd-14.3-RELEASE.json  freebsd-14.4-RELEASE.json  freebsd-15.0-RELEASE.json  (+19 more)
logo/: Logo-VMImageBuilderScripts.dia  make-logo-figures  make-logo-pdf
post-processors/: maas
projects/: 5gVINNI-Development.config  5gVINNI.config  Basic.config  Development.config  HAW-Desktop.config  HAW-Router.config  HiPerConTracer.config  KDE+Development.config  KDE.config  Minimal.config  NEAT.config  NorNet-Desktop.config  NorNet-Development.config  NorNet-Experiment.config  NorNet.config  RSerPoolDemo.config  SimulaMet-Desktop.config
scripts/: 00-minimal  01-system-settings  05-user-settings  06-sudo-without-password  10-basic  10-minimal  11-basic  11-system-info  12-configure-grub  13-system-info  15-zabbix-agent  20-kde  21-configure-firefox  21-configure-kde-desktop  22-configure-firefox  22-configure-wireshark  23-configure-strawberry  30-development  31-allow-wireshark-as-user  31-install-docker  38-allow-wireshark-as-user  39-source-repositories  50-nornet  51-nornet-development  52-nornet-display  55-nornet-experiment  59-prepare-nornet-sources  5g-vinni  60-neat  61-prepare-neat-sources  80-simulamet  81-prepare-5gVINNI-sources  85-prepare-example-sources  86-dbeaver  87-neat  88-rserpooldemo  89-hipercontracer  90-install-guest-utils  91-configure-kde-desktop  92-make-desktop-icons  (+35 more)
scripts/deprecated/: install-mptcp-kernel  prepare-development-environment  prepare-rserpool-environment  simulamet-desktop  simulamet-management
tests/: NorNet-Experiment-koala.ntnu.nornet.xml  get-locales-string  iso-urls  kde-test  make-script-tester  prepare-script-tester  qemu-test  run-shellcheck  sort-packages
vmsetup/: docker.json  proxmox-3disks.json  proxmox.json  qemu-3disks.json  qemu.json  virtualbox-3disks.json  virtualbox.json  vsphere-3disks.json
web/5gVINNI/: README.html
web/HAW/: README.html
web/HiPerConTracer/: README.html
web/NEAT/: README.html
web/RSerPoolDemo/: README.html
